Day 3 - JSX & React Component

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         const heading = document.createElement("h1")
 
-        heading.innerHTML = "Hello World from JavaScript"
+        heading.innerHTML = "Hello from JavaScript"
 
         const root = document.getElementById("root")
 
